Fixed the layout issues in the Surveys and Survey Details page.

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,6 +1,7 @@
 .survey-results {
   float: left;
-  margin-left: 15px;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .survey-details .progress {
